# followdb

./: Cargo.toml  README.md
.github/workflows/: coverage.yaml
examples/: 1538705932799987712-1692693920.txt  1538705932799987712-1692821177.txt
src/: lib.rs
src/compression/: mod.rs
src/diff/: error.rs  io.rs  mod.rs
src/history/: mod.rs
src/history/io/: compact.rs  expanded.rs  mod.rs
