[package]
name = "followdb"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/followdb"
homepage = "https://github.com/travisbrown/followdb"
edition = "2024"
version = "0.1.0"
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
byteorder = "1"
chrono = "0.4"
integer-encoding = "4"
lis = "1"
thiserror = "2"
zstd = "0.13"

[dev-dependencies]
quickcheck = "1"
rand = "0.9"
tempfile = "3"
