[package]
name = "followdb"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/followdb"
homepage = "https://github.com/travisbrown/followdb"
edition = "2024"
version = "0.1.0"
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
base64 = "0.22"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
integer-encoding = "4"
lis = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
quickcheck = "1"
rand = "0.9"
tempfile = "3"
